# MyTorch

./: .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
examples/: MNIST.py
neuralnet/: activators.py  data.py  loss_functions.py  metrics.py  network.py  optimisers.py  typing.py
tests/: test_activators.py  test_backward_prop.py  test_forward_prop.py  test_saveload.py  test_update.py
