[build-system]
requires = ["setuptools>=68", "wheel"]
#build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuralnet"
version = "0.1.0"
description = "A homemade neural network library built on NumPy"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neuralnet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
